--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,19 +1,29 @@
-security:
-  jwt:
-    secret: "d2V0cnl5dWlvb2piaG9vZmR2YmJibm15Zw=="
-    access: 3600000
-    refresh: 25920000000
-
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5433/taskslist?currentSchema=taskslist
     username: postgres
     password: root
     driver-class-name: org.postgresql.Driver
+    
+server:
+  port: 8090
+    # url: jdbc:mysql://${MYSQL_HOST:localhost}:3306/taskslist?useSSL=false
+    # username: root
+    # password: root
 
   sql:
     init:
       mode: never
       continue-on-error: false
-      data-locations: classpath:demo_data2.sql
 
+
+      # data-locations: classpath:demo_data2.sql
+
+# mybatis:
+#   mapper-locations: classpath:mybatis/mapper/*.xml
+
+security:
+  jwt:
+    access: 3600000
+    refresh: 25920000000
+    secret: cXdlcnR5ZmdodW9paWlpYmdBREZHZ2pic2tvdW9saGs=
