--- a/src/main/resources/application_.yaml
+++ b/src/main/resources/application_.yaml
@@ -17,8 +17,8 @@ spring:
 
 ###########################################
 
-#mybatis:
-  #mapper-locations: classpath:mybatis/mapper/*.xml
+mybatis:
+  mapper-locations: classpath:mybatis/mapper/*.xml
 
 security:
   jwt:
