--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <jjwt.version>0.11.5</jjwt.version>
         <jakarta.validation-api.version>3.0.2</jakarta.validation-api.version>
         <hibernate-validator.version>8.0.1.Final</hibernate-validator.version>
+        <mybatis.version>3.0.3</mybatis.version>
 
     </properties>
 
@@ -84,7 +85,7 @@
         <dependency>
             <groupId>org.mybatis.spring.boot</groupId>
             <artifactId>mybatis-spring-boot-starter</artifactId>
-            <version>3.0.3</version>
+            <version>${mybatis.version}</version>
         </dependency>
 
         <dependency>
